--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,16 @@
         android:theme="@style/Theme.ScoreJudge"
         tools:targetApi="31">
         <activity
+            android:name=".ViewSelectedBattleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConfirmDeleteBattleActivity"
+            android:exported="false"
+            android:parentActivityName=".DeleteBattleActivity" />
+        <activity
+            android:name=".DeleteBattleActivity"
+            android:exported="false" />
+        <activity
             android:name=".DisplayScoresActivity"
             android:exported="false" />
         <activity
